# efficient-fpt

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  rebuild.sh  setup.py
benchmarks/: README.md  __init__.py  batch_gpu_methods.py  batch_gpu_scaling.py  common.py  micro_logsumexp.py  single_trial_backends.py  single_trial_jax_methods.py
examples/: inference_comparison.ipynb  pymc_sampler_comparison.ipynb  tutorial_numpy_vs_jax.ipynb
examples/example0/: example0_single-stage-af.ipynb  example0_single-stage.ipynb
examples/example1/: example1_multi-stage.ipynb
examples/example2/: ex2_fpt_data_20250305-184050.npz  ex2_fpt_data_20250305-184050.pkl  example2_multi-stage-approx.ipynb
examples/example3/: ex3_fpt_data_20250306-155720.npz  ex3_fpt_data_20250306-155720.pkl  example3_ou.ipynb
examples/example4/: addm_gen_data.ipynb  addm_mle.ipynb
examples/example4_new/: addm_data_20251015-163921.npz  addm_gen_data.ipynb  addm_inference-af.ipynb  addm_inference.ipynb  bootstrap_20250928-140855.npy  bootstrap_20251016-131116.npy  mcmc_diagnosis_20250929-052602.pkl  mcmc_diagnosis_20251017-035721.pkl  mcmc_results_20250907-124324.pkl  mcmc_results_20251016-201724.pkl  mcmc_results_20251017-035721.npz  pymc_benchmark.ipynb
examples/example5_error/: error_analyses.ipynb
examples/example5_glam/ddm_with_double_sided_boundary/: glam_mle.ipynb
examples/example5_glam/ddm_with_one_sided_boundary/: glam_gen_data.py  (+2 more)
examples/example6_cythonsim/: cython_vs_python_simulator.ipynb  executed_output.ipynb
examples/example7_chunked_likelihood/: chunked_likelihood_comparison.ipynb
examples/example_jax/: mle_comparison.ipynb  pymc_sampler_comparison.ipynb  pymc_sampler_comparison_diag.ipynb  tutorial_numpy_vs_jax.ipynb
examples/example_simulator/: cython_vs_python_simulator.ipynb
src/efficient_fpt/: __init__.py  _defaults.py  addm.py  addm_helpers.py  addm_simulator_cy.pyx  boundaries.py  io.py  models.py  multi_stage.py  multi_stage_cy.c  multi_stage_cy.pyx  simulator_cy.pyx  single_stage.py  single_stage_cy.c  single_stage_cy.pxd  single_stage_cy.pyx  utils.py  validation.py
src/efficient_fpt_jax/: __init__.py  batch.py  multi_stage.py  single_stage.py  utils.py
src/efpt/: __init__.py  addm_helpers.py  boundaries.py  io.py  models.py  multi_stage.py  quadrature.py  single_stage.py  utils.py
tests/: conftest.py  helpers.py  test_addm_simulator.py  test_api_refactor.py  test_benchmarks.py  test_chunked_likelihood.py  test_cross_backend.py  test_edge_cases.py  test_examples_static.py  test_jax_multi_stage_equiv.py  test_jax_single_stage_equiv.py  test_logspace.py  test_multistage.py  test_multistage_general.py  test_singlestage.py  test_untested_coverage.py  test_utils_contract.py  test_validation.py
(+31 files in other folders)
